objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_MOTInboundTransportation__c</fullName>
        <description>This field will hold the MOT/Inbound Transportation values</description>
        <label>MOT/Inbound Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MOTInboundTransportationValueSet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store the associated Origin Product</description>
        <label>Origin Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Origin Product</relationshipLabel>
        <relationshipName>Price_Book_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSKUCode__c</fullName>
        <description>This field is to store SKU Code of the Product associated</description>
        <formula>Product2.StockKeepingUnit</formula>
        <label>Product SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPMaterialGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store the SAP Material group of the product</description>
        <label>Material Group</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SAP Material Group</relationshipLabel>
        <relationshipName>Price_Book_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>